update policy page

--- a/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
+++ b/BDS_04_BatDongSan_MultiLand/assets/css/option5.css
@@ -183,7 +183,7 @@
 
 .option5 #main-menu .navbar{
 	border-radius: 0;
-	background: #60a5d8;
+	background: #528eb9;
 }
 .option5 #main-menu .navbar-default .navbar-nav>li>a{
 	color: #fff;
