--- a/BDS_05_BatDongSan_MultiLand/assets/css/style.css
+++ b/BDS_05_BatDongSan_MultiLand/assets/css/style.css
@@ -5939,7 +5939,7 @@ span.notify-right {
     font-size: 14px;
     text-align: center;
     padding: 10px;
-    background-color: #5f93b9;
+    background-color: #3b5998;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     color: white;
