--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -143,11 +143,13 @@
                             <ul class="links">
 
                                 <li><a title="contact" href="/home/contact">Liên hệ</a></li>
-                                <li><a title="about" href="/home/about">Về chúng tôi</a></li>
+                                <li><a title="about" href="/about">Về chúng tôi</a></li>
                                 <li><a title="blog" href="/blog">Blogs</a></li>
-                                <li><a title="shipper" href="/chinh-sach-van-chuyen-a86">Chính sách vận chuyển</a></li>
-                                <li><a title="rollback" href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
-                                <li><a title="pay" href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
+                                <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
+                                <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
+                                <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                                <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                                <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
                             </ul>
                         </div>
                         <div class="footer-column">
