--- a/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
+++ b/BDS_05_BatDongSan_MultiLand/Views/Shared/_partial/_HomeSlide_2.cshtml
@@ -2,18 +2,18 @@
 @using AnperoFrontend.WebService;
 <div class="col-md-6">
 
-    @if (ViewData["BestsaleProduct"] != null)
+    @if (ViewData["featureleProduct"] != null)
     {
-        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];        
+        AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["featureleProduct"];        
         if (bestSaleList.Item.Length > 0)
         {
             <div class="col-md-12 faticle" style="padding:0px;">
                 <div class="col-md-4 image-hover2">
-                    <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)"><img src="@bestSaleList.Item[0].Images" alt="@bestSaleList.Item[0].PrName"></a>
+                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)"><img src="@bestSaleList.Item[0].Images" alt="@bestSaleList.Item[0].PrName"></a>
                 </div>
                 <div class="post-desc">
                     <h2 class="post-title">
-                        <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[0].PrName)</a>
+                        <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[0].PrName,bestSaleList.Item[0].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[0].PrName)</a>
                     </h2>
                     @bestSaleList.Item[0].ShortDesc
                 </div>
@@ -26,7 +26,7 @@
                         {
                             <div class="post-desc">
                                 <h5 class="post-title">
-                                    <a href="@Anpero.StringHelpper.GetArticleLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[i].PrName)</a>
+                                    <a href="@Anpero.StringHelpper.GetProductLink(bestSaleList.Item[i].PrName,bestSaleList.Item[i].Id)">@Anpero.StringHelpper.SubString(80, bestSaleList.Item[i].PrName)</a>
                                 </h5>
                             </div>
                         }
@@ -41,9 +41,9 @@
     <div class="border-b">
         <div class="featureLand">
             <div class="scl2">
-                @if (ViewData["featureleProduct"] != null)
+                @if (ViewData["BestsaleProduct"] != null)
                 {
-                    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["featureleProduct"];
+                    AnperoFrontend.WebService.SearchResult bestSaleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
                     int itemCount = bestSaleList.Item.Length;
                     if (bestSaleList != null && itemCount > 0)
                     {
