--- a/Shop_03_multiProduct/Views/Product/Checkout.cshtml
+++ b/Shop_03_multiProduct/Views/Product/Checkout.cshtml
@@ -126,10 +126,11 @@
                                     </tr>
                                 </tfoot>
                             </table>
-                            <div class="col-md-12">
+                            <div class="col-md-12 ctContent">
                                 <div id="g-recaptcha" class="pull-right"></div>
                             </div>
-                            <div class="col-md-12">
+                            <div class="clearfix"></div>
+                            <div class="col-md-12 ">
                                 <a href="/" title="Continue Shopping" class="btn button btn-continue" onclick=""><span><span>Mua thêm</span></span></a>                                
                                 <button type="submit" name="update_cart_action" value="update_qty" title="Update Cart" class="button btn-update pull-right" id="orderBtn"><span><span>Gửi đơn hàng</span></span></button>                                
                                
@@ -139,7 +140,7 @@
                     </div>
                     <div class="page-content checkout-page" id="cartContent2" style="display:none;"></div>
                     <div id='ajax_loader' style="position: fixed; left: 45%; top: 50%; display: none;">
-                        <img src="~/assets/images/loading.gif" />
+                        <img src="/assets/images/loading.gif" />
                     </div>
                 </div>
             </div>
