--- a/Shop_02_Onepage/Views/Home/Index.cshtml
+++ b/Shop_02_Onepage/Views/Home/Index.cshtml
@@ -18,17 +18,20 @@
         <div class="row">
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
                 <div class="page-title">
-                    <h2>Chủ đầu tư</h2>
+                    <h2>Gia đình Anpero</h2>
                 </div>
                 <div class="about-text">
-                    <h3>Tổng Công ty Xây dựng Hà Nội</h3>
-                    <p>Với cơ sở vật chất và con người ngày càng được tăng cường, bằng lao động sáng tạo của mình, HANCORP đã thi công hàng nghìn công trình dân dụng, công nghiệp, giao thông thuỷ lợi, hạ tầng kỹ thuật, hạ tầng xã hội trên mọi miền đất nước và các công trình ở nước ngoài như Liên xô cũ, Cộng hoà I-Rắc và Cộng hoà dân chủ nhân dân Lào.</p>
+                    <h3>Những nhà quản lý và lập trình viên dày dạn kinh nghiệm</h3>
+                    <p>Xuất phát từ nhu cầu sử dụng của chính doanh nghiệp mình, các doanh nghiệp Việt Nam</p>
                     <div class="about-text-button">
                         <a href="/tong-cong-ty-xay-dung-ha-noi-ctcp-a69" class="battn">Xem thêm</a>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
+                <img src="/assets/images/about-img.png" />
+            </div>
+            </div>
     </div>
 </section>
 
