--- a/Shop_02_Onepage/Views/Shared/_Layout.cshtml
+++ b/Shop_02_Onepage/Views/Shared/_Layout.cshtml
@@ -20,6 +20,17 @@
     <meta name="robots" content="index,follow,all" />
     <meta property="og:title" content="@ViewBag.Title" />
     @Styles.Render("~/Content/css")
+       <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/normalize.css">
+    <link rel="stylesheet" href="/assets/css/pogo-slide.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/lightbox.css">
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+
+    <!--=== MAIN STYLYLESHEETS ===-->
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
     <script src="/assets/js/vendor/modernizr-2.js"></script>
     @RenderSection("health", required: false)
 
