--- a/Shop_02_Onepage/Views/Home/Index.cshtml
+++ b/Shop_02_Onepage/Views/Home/Index.cshtml
@@ -22,14 +22,14 @@
                 </div>
                 <div class="about-text">
                     <h3>Những nhà quản lý và lập trình viên dày dạn kinh nghiệm</h3>
-                    <p>Xuất phát từ nhu cầu sử dụng của chính doanh nghiệp mình, các doanh nghiệp Việt Nam</p>
+                    <p>Xuất phát từ nhu cầu sử dụng của chính doanh nghiệp mình, chúng tôi đã liên kết với nhau để tạo ra hệ thống quản lý web bán hàng chuyên nghiệp và an toàn. Anpero là tâm huyết của các kỹ sư hàng đầu trong lĩnh vực CNTT, các doanh nghiệp lớn trong ngành bán lẻ từ Mỹ và Việt Nam như Anker,TMT,Luxa ...</p>
                     <div class="about-text-button">
-                        <a href="/tong-cong-ty-xay-dung-ha-noi-ctcp-a69" class="battn">Xem thêm</a>
+                        <a href="/about" class="battn">Xem thêm</a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 text-right wow fadeIn">
-                <img src="/assets/images/about-img.png" />
+                <img src="/assets/images/about.jpg" />
             </div>
             </div>
     </div>
