--- a/Shop_03_multiProduct/assets/stylesheet/style.css
+++ b/Shop_03_multiProduct/assets/stylesheet/style.css
@@ -14217,3 +14217,41 @@ select#shipping-address-select {
     padding-top: 10px;
     border-top: 1px solid whitesmoke;
 }
+.price-percent-reduction2{
+        position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: red;
+    padding: 5px;
+    margin: 5px;
+    color: white;
+}
+.show-count-down{
+  text-align: center;
+  margin-bottom:5px;
+}
+.show-count-down .box-count{
+  display: inline-block;
+  margin-right: 2px;
+  color: #ff3366;
+}
+.show-count-down .dot{
+  display: none;
+}
+.show-count-down .box-count .number{
+  
+  width: 100%;
+  float: left;
+  background: #eaeaea;
+  padding: 5px 0;
+  font-size: 16px;
+}
+.show-count-down .box-count .text{
+  background: #eaeaea;
+  font-size: 12px;
+  margin-top: 1px;
+  width: 100%;
+  float: left;
+  padding: 5px 0; 
+  color: #666;
+}
