--- a/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/Shop_03_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -19,13 +19,13 @@
                 <li>
                     <div class="feature-box need-help">
                         <div class="icon-support"></div>
-                        <div class="content">Điện thoại Tư vấn 0964 484 833</div>
+                        <div class="content">Điện thoại Tư vấn 0906.006.580</div>
                     </div>
                 </li>
                 <li>
                     <div class="feature-box money-back">
                         <div class="icon-money"></div>
-                        <div class="content">Hoàn trả lại tiền cho khách</div>
+                        <div class="content">Đổi trả trong 30 ngày</div>
                     </div>
                 </li>
                 <li class="last">
@@ -143,11 +143,13 @@
                             <ul class="links">
 
                                 <li><a title="contact" href="/home/contact">Liên hệ</a></li>
-                                <li><a title="about" href="/home/about">Về chúng tôi</a></li>
+                                <li><a title="about" href="/about">Về chúng tôi</a></li>
                                 <li><a title="blog" href="/blog">Blogs</a></li>
-                                <li><a title="shipper" href="/chinh-sach-van-chuyen-a86">Chính sách vận chuyển</a></li>
-                                <li><a title="rollback" href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
-                                <li><a title="pay" href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
+                                <li><a title="Chính sách vận chuyển" href="/shippolicy">Chính sách vận chuyển</a></li>
+                                <li><a title="Chính sách bảo hành" href="/WarrantyPolicy">Chính sách bảo hành</a></li>
+                                <li><a title="Chính sách đổi trả" href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                                <li><a title="Chính sách bảo mật" href="/PrivacyPolicy">Chính sách bảo mật</a></li>
+                                <li><a title="Hướng dẫn thanh toán" href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
                             </ul>
                         </div>
                         <div class="footer-column">
@@ -199,16 +201,13 @@
     </footer>
 </div>
 
-<!-- End For version 1,2,3,4,6 -->
-<!--page-->
-<!-- Mobile Menu-->
 <div id="mobile-menu">
     <ul>
         <li>
             <div class="home"><a href="/"><i class="icon-home"></i>Trang chủ</a> </div>
         </li>
         <li>
-            <a href="/home/about">Giới thiệu</a>
+            <a href="/about">Giới thiệu</a>
         </li>
         <li>
             <a href="#">Sản phẩm</a>
@@ -259,9 +258,9 @@
             <a href="/blog">Tin tức</a>
             <ul>
                 <li><a href="/blog">Blogs</a></li>
-                <li><a href="/chinh-sach-van-chuyen-a86">Vận chuyển</a></li>
-                <li><a href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
-                <li><a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
+                <li><a href="/shippolicy">Chính sách vận chuyển</a></li>
+                <li><a href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                <li><a href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
             </ul>
         </li>
         <li><a href="/home/contact">Liên hệ</a></li>
