--- a/Shop_03_multiProduct/assets/stylesheet/revslider-v2.css
+++ b/Shop_03_multiProduct/assets/stylesheet/revslider-v2.css
@@ -1,3 +1,22 @@
+/*-----------------------------------------------------------------------------
+
+	-	Revolution Slider 4.1 Captions -
+
+		Screen Stylesheet
+
+version:   	1.4.5
+date:      	13/08/15
+author:		ThemesMart
+email:      support@themesmart.net
+website:   	http://www.themesmart.net/
+-----------------------------------------------------------------------------*/
+
+
+
+/*************************
+	-	CAPTIONS	-
+**************************/
+
 #thm-mart-slideshow {
 	border: none;
 	padding: 0;
@@ -9,6 +28,23 @@
 
 	
 }
+
+#thm-mart-slideshow:before{   content: "";
+  position: absolute;
+  z-index: 100;
+  background-color: #f5f5f5;
+  padding: 0 2000px;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  -webkit-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  transform: rotate(-5deg);
+  width: 100%;
+  height: 200px;
+  display: inline-block;
+  bottom: -60px;
+  left: -2000px;}
 
 #thm-mart-slideshow .container { padding:0px; width:100%; }
 #thm-mart-slideshow .container img {
@@ -23,7 +59,7 @@
 	float: left
 }
 
-.forcefullwidth_wrapper_tp_banner, .fullwidthbanner-container {height:650px!important}
+.forcefullwidth_wrapper_tp_banner, .fullwidthbanner-container {height:900px!important}
 
 #thm-mart-slideshow .RHS-banner {
 /*float: right;
